kdemo/kdemo-dep.yaml
kind: Deployment
apiVersion:	extensions/v1beta1
metadata:
  name: kdemo-dep
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: kdemo
        visualize: 'true'
    spec:
      containers:
      - name: kdemo
        image: ikester/kdemo:v1
        ports:
        - containerPort: 8080
      terminationGracePeriodSeconds: 5
